# DataLiveTest

./: .gitignore  README.md  main.py  pyproject.toml
pages/: collection_info.py  cover.py  data_import.py  data_info.py  explore_special.py  main_page.py  select_db_and_collection.py
src/: openai_caller.py
src/MongoDB/: analyze_emb.py  analyze_graph.py  analyze_img.py  utils_MongoDB.py
src/model/: ui_utils.py
src/tests/: test_generated_code.py  test_openai.py  test_plot.py
src/utils/: analyse.py  cleaning_data.py  data_info.py  data_info_function.py
