[project]
name = "livedata"
version = "0.1.0"
description = "Interactive platform to explore and analyze user-provided datasets with AI support"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "openai>=1.78.1",
    "requests>=2.32.3",
    "opencv-python>=4.11.0.86",
    "pymongo>=4.6.3",
    "orjson>=3.9.15",
    "plotly>=5.21.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "networkx>=3.3",
    "pyvis>=0.3.2"
]